--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,13 +1,33 @@
-
-h1 {
-  text-align: center;
+.page-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 30%;
 }
+
+
+.main-heading {
+  display: flex;
+  justify-content:space-around;
+  align-items: flex-end;
+}
+
+.title-moves {
+  flex-direction: column;
+}
+
+.rules-button {
+  height: 4em;
+  width: 4em;
+  background-color: violet;
+}
+
 
 .container {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 0 30%;
+  /*margin: 0 30%;*/
 }
 
 [data-stack] {
